# bugbot

./: .gitignore  BACKLOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  handoff.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
deploy/: .env.example  Caddyfile.example  docker-compose.prod.yml  docker-compose.yml
legacy/src/bugbot/libs/: logging.py  redact.py
legacy/src/bugbot/prompts/focus/: asr.md
legacy/src/bugbot/server/: app.py  worker.py
legacy/src/bugbot/services/: security.py
legacy/tests/: test_bitbucket_client.py  test_claude_cli.py  test_diff_parser.py  test_github_client.py  test_redact.py  test_security_scanner.py  test_server_app.py  test_webhook_github_parsing.py
prompts/: fix.md  reply.md  system.md
prompts/focus/: data-eng.md  general.md
scripts/: install-host.sh
src/: config.rs  interactive.rs  lib.rs  main.rs  prompts.rs  review.rs
src/bugbot/: config.py
src/bugbot/cli/: main.py
src/bugbot/clients/: _provider.py  bitbucket.py  claude_cli.py  github.py
src/bugbot/prompts/: system.md  user.md
src/bugbot/prompts/focus/: general.md
src/bugbot/server/: app.py  auth.py  webhook.py  webhook_github.py  worker.py
src/bugbot/services/: diff.py  repo.py  review.py
src/clients/: bitbucket.rs  github.rs  github_app.rs  mod.rs  provider.rs
src/clients/llm/: claude.rs  codex.rs  mod.rs
src/libs/: logging.rs  mod.rs  redact.rs
src/server/: app.rs  auth.rs  mod.rs  webhook.rs  webhook_github.rs  worker.rs
src/services/: diff.rs  mod.rs  repo.rs  security.rs
tests/: server_test.rs  test_bitbucket_client.py  test_claude_cli.py  test_config.py  test_github_client.py  test_repo_clone.py  test_review_orchestrator.py  test_server_app.py  test_template.py  test_webhook_auth.py  test_webhook_parsing.py
